<resources>
    <string name="app_name">ClientApp</string>
    <string name="splash_screen_text">Приветствие!</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация нового пользователя</string>
    <string name="enter">Войти</string>
    <string name="name">Имя:</string>
    <string name="second_name">Фамилия:</string>
    <string name="phone_number">Номер телефона:</string>
    <string name="registration_title">Регистрация</string>
    <string name="ok">ОК</string>
    <string name="field_required">Обязательное поле</string>
</resources>
