<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.hedgehog.clientapp.activity.RegistrationActivity">

    <TextView
        android:text="@string/registration_title"
        android:textSize="@dimen/text_login_activity_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etLogin"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_alignStart="@+id/etLogin" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLogin"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_alignStart="@+id/etLogin"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/etLogin"
        android:layout_alignEnd="@+id/etLogin"
        android:id="@+id/etPass" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPass"
        android:layout_alignLeft="@+id/etPass"
        android:layout_alignStart="@+id/etPass"
        android:layout_marginTop="33dp"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/etPass"
        android:layout_alignEnd="@+id/etPass"
        android:id="@+id/etName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:id="@+id/etSecondName" />

    <TextView
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSecondName"
        android:layout_alignLeft="@+id/etSecondName"
        android:layout_alignStart="@+id/etSecondName"
        android:id="@+id/textView8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/textView8"
        android:layout_alignRight="@+id/etSecondName"
        android:layout_alignEnd="@+id/etSecondName"
        android:id="@+id/etPhone" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:id="@+id/bOk" />

    <TextView
        android:text="@string/second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/etName"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName" />


</RelativeLayout>
